--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ExtendedJS",
+  "name": "extendedjs",
   "title": "ExtendedJS",
   "description": "Small library which extend basic functionality of JavaScript",
   "version": "1.0.9",
@@ -12,11 +12,6 @@
     {
       "name": "Alexander Krupko",
       "email": "alex@avrora.team",
-      "url": "www.avrora.team"
-    },
-    {
-      "name": "Slava Krasnyansky",
-      "email": "slava@avrora.team",
       "url": "www.avrora.team"
     }
   ],
@@ -36,9 +31,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "load-grunt-tasks": "^3.5.0"
-  },
-  "dependencies": {
+    "load-grunt-tasks": "^3.5.0",
     "time-grunt": "^1.3.0"
-  }
+  },
+  "dependencies": {}
 }
