changed npm project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extendedjs",
+  "name": "javascript-extendedjs",
   "title": "ExtendedJS",
   "description": "Small library which extend basic functionality of JavaScript",
   "version": "1.0.9",
